arreglo de controladores y confirmacion para logout

--- a/src/app/components/about-edit/about-edit.component.html
+++ b/src/app/components/about-edit/about-edit.component.html
@@ -83,13 +83,13 @@
                     type="submit"
                     class="dialog-button"
                     [mat-dialog-close]="form"
-                >EDITAR</button>
+                >Guardar</button>
                 <button 
                     mat-raised-button 
                     type="button" 
                     class="dialog-button"
                     (click)="onNoClick()"
-                >CERRAR</button>
+                >Cerrar</button>
             </div>
         </mat-accordion>
     </form>
