--- a/src/app/components/compsProject/project-add/project-add.component.html
+++ b/src/app/components/compsProject/project-add/project-add.component.html
@@ -6,7 +6,7 @@
             <mat-label>Ingrese el nombre del proyecto</mat-label>
             <input 
                 matInput 
-                placeholder="Nombre del proyecto" 
+                placeholder="Ej: Portfolio personal" 
                 type="text"
                 formControlName="nombreProyecto"
             >
@@ -44,7 +44,7 @@
                 mat-raised-button
                 color="accent"
                 type="submit"
-            >Enviar</button>
+            >Guardar</button>
             <button
                 mat-raised-button
                 (click)="onNoClick()"
