--- a/src/app/components/compsProject/project-item/project-item.component.css
+++ b/src/app/components/compsProject/project-item/project-item.component.css
@@ -32,7 +32,15 @@
 }
 
 .container_fecha {
-    padding: 2% 0;
+    padding: 1% 0;
+}
+
+.container_fecha > span {
+    font-size: 0.8rem;
+}
+
+.container_fecha__mobile {
+    display: none;
 }
 
 /* ------------------------ MEDIA QUERIES ---------------------- */
@@ -52,8 +60,15 @@
         font-weight: 400;
     }
 
-    .container_fecha > span {
-        display: flex;
-        align-items: center;
+    .container_fecha__mobile {
+        display: block;
+    }
+
+    .container_fecha__mobile > span {
+        font-size: 1rem;
+    }
+
+    .container_fecha__desktop {
+        display: none;
     }
 }
