--- a/src/app/components/compsTecnologia/tecnologias/tecnologias.component.html
+++ b/src/app/components/compsTecnologia/tecnologias/tecnologias.component.html
@@ -6,7 +6,7 @@
         mat-flat-button 
         color="accent"
         *ngIf="isAdmin"
-        routerLink="tecnologia"
+        routerLink="tecnologias"
     >
         <i class="fa-regular fa-edit"></i>
         Editar tecnologías
