--- a/src/app/components/delete-conf/delete-conf.component.html
+++ b/src/app/components/delete-conf/delete-conf.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-delete">
     <h2 class="dialog-title">¿Está seguro de eliminar el elemento "{{data.name}}"?</h2>
     <button mat-button class="dialog-button" [mat-dialog-close]="true">Eliminar</button>
-    <button mat-button class="dialog-button" (click)="onNoClick()">Cerrar</button>
+    <button mat-flat-button class="dialog-button" color="accent" (click)="onNoClick()">Cerrar</button>
 </div>
