--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -38,6 +38,10 @@
     width: 40%;
 }
 
+.loading {
+    width: 100%;
+}
+
 /* -------------------------- MEDIA ----------------------- */
 @media (max-width: 768px) {
     .card-login {
