--- a/src/app/components/compsEducation/education-item/education-item.component.html
+++ b/src/app/components/compsEducation/education-item/education-item.component.html
@@ -5,13 +5,17 @@
             <mat-card-title-group>
                 <mat-card-title class="card__title">{{educacion.nombreInstituto}}</mat-card-title>
                 <mat-card-subtitle class="card__subtitle">{{educacion.titulo}}</mat-card-subtitle>
-                <div class="container_fecha" *ngIf="educacion.fecha_inicio != null">
+                <div class="container_fecha container_fecha__desktop" *ngIf="educacion.fecha_inicio != null">
                     <span>{{educacion.fecha_inicio | date:'dd/MM/yyyy'}}</span>
                     <span *ngIf="educacion.fecha_fin != null"> - {{educacion.fecha_fin | date: 'dd/MM/yyyy'}}</span>
                 </div>
             </mat-card-title-group>
         </mat-card-header>
         <mat-card-content>
+            <div class="container_fecha container_fecha__mobile" *ngIf="educacion.fecha_inicio != null">
+                <span>{{educacion.fecha_inicio | date:'dd/MM/yyyy'}}</span>
+                <span *ngIf="educacion.fecha_fin != null"> - {{educacion.fecha_fin | date: 'dd/MM/yyyy'}}</span>
+            </div>
             <mat-card-subtitle class="en_progreso en_progreso__desktop" *ngIf="educacion.en_progreso">Actualmente en progreso</mat-card-subtitle>
             <mat-card-subtitle class="en_progreso en_progreso__mobile" *ngIf="educacion.en_progreso">En progreso</mat-card-subtitle>
             <h3 class="card__content__title">Descripción:</h3>
