--- a/src/app/components/compsExperiencia/experiencia-edit/experiencia-edit.component.html
+++ b/src/app/components/compsExperiencia/experiencia-edit/experiencia-edit.component.html
@@ -6,7 +6,7 @@
             <mat-label>Ingrese el nombre de la empresa</mat-label>
             <input 
                 matInput 
-                placeholder="Nombre de la empresa" 
+                placeholder="Ej: Globant" 
                 type="text"
                 formControlName="nombre_empresa"
             >
@@ -17,7 +17,7 @@
             <mat-label>Ingrese su puesto</mat-label>
             <input 
                 matInput 
-                placeholder="Puesto" 
+                placeholder="Ej: Desarrollador front end Jr." 
                 type="text"
                 formControlName="puesto"
             >
@@ -76,7 +76,7 @@
                 mat-raised-button
                 color="accent"
                 type="submit"
-            >Enviar</button>
+            >Guardar</button>
             <button
                 mat-raised-button
                 (click)="onNoClick()"
