--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div>
     <app-about></app-about>
-    <app-educations></app-educations>
-    <app-experiencias></app-experiencias>
-    <app-tecnologias></app-tecnologias>
-    <app-projects></app-projects>
+    <app-educations id="educacion"></app-educations>
+    <app-experiencias id="experiencia"></app-experiencias>
+    <app-tecnologias id="skills"></app-tecnologias>
+    <app-projects id="proyectos"></app-projects>
 </div>
