--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -34,3 +34,9 @@ a {
 .icon__linkedin:hover {
     color: #0077b5;
 }
+
+@media (max-width: 576px) {
+    .footer {
+        margin-top: 2rem;
+    }
+}
