--- a/src/app/components/compsEducation/education-item/education-item.component.css
+++ b/src/app/components/compsEducation/education-item/education-item.component.css
@@ -49,9 +49,10 @@
 
 .en_progreso {
     margin: 0.5rem 0;
-    background-color: rgb(191, 216, 240);
+    background-color: rgb(198, 247, 205);
     text-align: center;
     border-radius: 10px;
+    color: #646464;
 }
 
 .en_progreso__desktop {
