--- a/src/app/components/compsExperiencia/experiencia-item/experiencia-item.component.css
+++ b/src/app/components/compsExperiencia/experiencia-item/experiencia-item.component.css
@@ -49,10 +49,11 @@
 
 .actual {
     margin: 0.5rem 0;
-    background-color: rgb(191, 216, 240);
+    background-color: rgb(198, 247, 205);
     text-align: center;
     border-radius: 10px;
     width: 20%;
+    color: #646464;
 }
 
 
