--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,3 +1,20 @@
 div {
     padding-bottom: 2%;
 }
+
+.up_button {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    cursor: pointer;
+    background-color: rgb(231, 231, 231, 0.4);
+    border: 1px solid #a7a7a7;
+    border-radius: 10px;
+    padding: 1.5rem;
+    font-size: 2rem;
+}
+
+.icon {
+    font-size: 1.5rem;
+    margin-bottom: 0.4rem;
+}
