--- a/src/app/components/compsTecnologia/tecnologias/tecnologias.component.html
+++ b/src/app/components/compsTecnologia/tecnologias/tecnologias.component.html
@@ -1,6 +1,6 @@
 <div class="component-header">
     <div class="container-title">
-        <h2>SKILLS:</h2>
+        <h2>HARD SKILLS:</h2>
     </div>
     <button 
         mat-flat-button 
