--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,8 @@
                 <span>Proyectos</span>
             </button>
         </mat-menu>
-        <h2 routerLink="">Portfolio</h2>
+        <img routerLink="" src="../../../assets/images/arg-programa.png" alt="Arg. programa">
+        <!-- <h2 routerLink="">Portfolio</h2> -->
     </div>
     <div class="contenedor-menu col-2 col-sm-5 col-md-4 col-lg-3">
         <div class="contenedor-iconos">
