--- a/src/app/components/compsEducation/education-control/education-control.component.html
+++ b/src/app/components/compsEducation/education-control/education-control.component.html
@@ -7,13 +7,16 @@
                 <button mat-flat-button color="warn" routerLink="">Volver</button>
             </div>
         </div>
-        <mat-card *ngFor="let education of educations" class="card-item">
+        <mat-card *ngFor="let education of educations, let i = index " class="card-item">
             <mat-card-header class="card-header">
                 <mat-card-title>{{education.nombreInstituto}}</mat-card-title>
                 <mat-card-subtitle>{{education.titulo}}</mat-card-subtitle>
             </mat-card-header>
             <div class="card-container">
                 <div class="card-description">
+                    <div class="card-imagen" *ngIf="education.imagen">
+                        <img width="30%" alt="Imagen de educacion" [src]="imageUrls[i]" [id]="'edu-image-' + i">
+                    </div>
                     <span *ngIf="education.fecha_inicio != null">Fecha: {{education.fecha_inicio | date:"dd/MM/yyyy"}}</span>
                     <span *ngIf="education.fecha_fin != null"> - {{education.fecha_fin | date:"dd/MM/yyyy"}}</span>
                     <p>{{education.descripcion}}</p>
