--- a/src/app/components/compsExperiencia/experiencia-add/experiencia-add.component.html
+++ b/src/app/components/compsExperiencia/experiencia-add/experiencia-add.component.html
@@ -68,6 +68,17 @@
             </div>
         </div>
 
+        <!-- IMAGEN -->
+        <div class="form-field form-field__imagen">
+            <mat-label>Ingrese una imagen:</mat-label>
+            <input 
+                placeholder="Imagen" 
+                type="file"
+                formControlName="imagen"
+                (change)="onChangeImage($event)"
+            >
+        </div>
+
         <!-- TRABAJO ACTUAL -->
         <mat-checkbox formControlName="trabajo_actual">Trabajo actual</mat-checkbox>
 
