--- a/src/app/components/compsExperiencia/experiencia-item/experiencia-item.component.html
+++ b/src/app/components/compsExperiencia/experiencia-item/experiencia-item.component.html
@@ -1,7 +1,17 @@
 <div>
     <mat-card class="card">
         <mat-card-header class="card__header">
-            <div mat-card-avatar class="avatar"></div>
+            <div 
+                mat-card-avatar 
+                class="avatar" 
+                id="exp-image" 
+                *ngIf="experiencia.imagen"
+            ></div>
+            <div 
+                mat-card-avatar 
+                class="avatar__predet"
+                *ngIf="!experiencia.imagen"
+            ></div>
             <mat-card-title-group>
                 <mat-card-title class="card__title">{{experiencia.nombre_empresa}}</mat-card-title>
                 <mat-card-subtitle class="card__subtitle">{{experiencia.puesto}}</mat-card-subtitle>
