--- a/src/app/components/compsProject/project-add/project-add.component.css
+++ b/src/app/components/compsProject/project-add/project-add.component.css
@@ -20,6 +20,16 @@
     width: 100%;
 }
 
+.form-field__imagen{
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-field__imagen > input {
+    margin-top: 0.5rem;
+}
+
 .container-buttons {
     display: flex;
     justify-content: space-between;
