--- a/src/app/components/compsExperiencia/experiencia-item/experiencia-item.component.css
+++ b/src/app/components/compsExperiencia/experiencia-item/experiencia-item.component.css
@@ -10,13 +10,9 @@
     align-items: center;
 }
 
-.avatar,
-.avatar__predet {
+.avatar {
     background-size: cover;
     margin: 0 1rem 0 0;
-}
-
-.avatar__predet {
     background-image: url(https://firebasestorage.googleapis.com/v0/b/portfolio-dc280.appspot.com/o/exp.jpg?alt=media&token=d6e4a1d4-cd2c-4a7a-a8cd-d231d73d3acc);
 }
 
